--- a/index.css
+++ b/index.css
@@ -5,18 +5,25 @@
 }
 
 nav {
-  background: #222;
+  background: gray;
   padding: 15px;
-  /* height: 70px; */
+
+}
+.item {
+  padding: 10px;
+  order: 2;
+  width: 100%;
+  text-align: center;
+  display: none;
 }
 
-a {
+.item a {
   color: white;
   text-decoration: none;
 }
 
 .menu {
-  list-style-type: none;
+  /* list-style-type: none; */
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -28,7 +35,8 @@ a {
   width: 90%;
   font-size: 20px;
   padding: 7.5px 10px 7.5px 0;
-  /* justify-content: center; */
+  justify-content: center;
+  color: white;
 }
 
 .item {
@@ -46,10 +54,6 @@ a {
 .menu li a {
   display: block;
   padding: 15px 5px;
-}
-
-.menu li.subitem a {
-  padding: 15px;
 }
 
 .toggle {
@@ -86,3 +90,49 @@ a {
     display: none;
   }
 }
+
+
+img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  
+ }
+
+
+
+ /* /////////////////////////// HOME ////////////////////////// */
+ 
+ #home-img {
+   align-self: center;
+ }
+
+#home {
+  padding: 50px;
+  background-color: silver;
+}
+
+.home-about {
+  margin: 10px;
+  list-style: none;
+}
+
+.row {
+  width: 100%;
+
+}
+
+/* ////////////////////////////////////////////////////////////////// */
+
+
+
+/* ////////////////////////////// PORTFOLIO /////////////////////////// */
+.projects {
+  text-align: center;
+}
+
+#portfolio {
+  background-color: honeydew;
+}
+
+/* ////////////////////////////////////////////////////////////////////// */
