--- a/index.css
+++ b/index.css
@@ -4,10 +4,11 @@
   margin: 0;
 }
 
+/* NAVBAR */
+
 nav {
   background: gray;
   padding: 15px;
-
 }
 .item {
   padding: 10px;
@@ -28,13 +29,14 @@ nav {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  margin: 0;
 }
 
 .logo {
   display: inline-block;
   width: 90%;
   font-size: 20px;
-  padding: 7.5px 10px 7.5px 0;
+  padding-right: 10px;
   justify-content: center;
   color: white;
 }
@@ -47,8 +49,9 @@ nav {
   display: none;
 }
 
-.item a:hover, .item a:hover::after {
-  color: blue
+.item a:hover,
+.item a:hover::after {
+  color: blue;
 }
 
 .menu li a {
@@ -66,9 +69,8 @@ nav {
   display: block;
 }
 
-
 /* Tablet view */
-@media all and (min-width: 700px){
+@media all and (min-width: 700px) {
   .menu {
     justify-content: center;
   }
@@ -76,6 +78,7 @@ nav {
   .logo {
     flex: 1;
   }
+
   .item {
     width: auto;
     order: 2;
@@ -91,21 +94,23 @@ nav {
   }
 }
 
-
-img {
-  width: 100px;
-  height: 100px;
+.logo-img {
+  width: 70px;
+  height: 70px;
   border-radius: 50px;
-  
- }
+}
 
+/* /////////////////////////// HOME ////////////////////////// */
 
+#home-img {
+  align-self: center;
+}
 
- /* /////////////////////////// HOME ////////////////////////// */
- 
- #home-img {
-   align-self: center;
- }
+#headshot {
+  width: 250px;
+  height: 300px;
+  border-radius: 85px;
+}
 
 #home {
   padding: 50px;
@@ -119,20 +124,43 @@ img {
 
 .row {
   width: 100%;
-
 }
 
 /* ////////////////////////////////////////////////////////////////// */
-
-
 
 /* ////////////////////////////// PORTFOLIO /////////////////////////// */
 .projects {
   text-align: center;
 }
 
-#portfolio {
-  background-color: honeydew;
+.card-container {
+  margin: 10;
+}
+
+.card-img-top {
+  height: 380px;
+}
+
+.card-container .card {
+  padding: 30px;
+  background-color: gray;
+}
+
+#p4-img {
+  width: 185px;
+  height: 380px;
+  align-self: center;
 }
 
 /* ////////////////////////////////////////////////////////////////////// */
+
+/* //////////////////////SKILLS/EDUCATION ///////////////////////////////// */
+.skills {
+  padding: 50px;
+}
+
+.icon {
+  margin: 10px;
+}
+
+/* ////////////////////////////////////////////////////////////////////////// */
