--- a/index.css
+++ b/index.css
@@ -2,13 +2,24 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Kumbh Sans', sans-serif;
+}
+
+body {
+  min-width: fit-content;
+}
+.body {
+  background: skyblue;
+  /* padding: 20px; */
+  min-width: fit-content;
 }
 
 /* NAVBAR */
 
 nav {
-  background: gray;
+  background: silver;
   padding: 15px;
+  width: 100%;
 }
 .item {
   padding: 10px;
@@ -39,6 +50,7 @@ nav {
   padding-right: 10px;
   justify-content: center;
   color: white;
+  padding-left: 30px;
 }
 
 .item {
@@ -71,6 +83,7 @@ nav {
 
 /* Tablet view */
 @media all and (min-width: 700px) {
+  /* NAVBAR */
   .menu {
     justify-content: center;
   }
@@ -85,12 +98,22 @@ nav {
     display: block;
     padding: 0 10px;
   }
+
   .headerDiv {
     display: flex;
     align-items: center;
   }
+
   .toggle {
     display: none;
+  }
+
+  /* ///////////////////////// */
+
+  .body {
+    background: skyblue;
+    min-width: fit-content;
+    /* padding: 50px; */
   }
 }
 
@@ -101,7 +124,11 @@ nav {
 }
 
 /* /////////////////////////// HOME ////////////////////////// */
-
+#home {
+  padding: 50px;
+  background-color: snow;
+  margin: 0.5px;
+}
 #home-img {
   align-self: center;
 }
@@ -112,29 +139,31 @@ nav {
   border-radius: 85px;
 }
 
-#home {
-  padding: 50px;
-  background-color: silver;
-}
-
 .home-about {
   margin: 10px;
   list-style: none;
 }
 
-.row {
+/* .row {
   width: 100%;
-}
+} */
 
 /* ////////////////////////////////////////////////////////////////// */
 
-/* ////////////////////////////// PORTFOLIO /////////////////////////// */
+/* ////////////////////////////// Projects /////////////////////////// */
+#portfolio {
+  background-color: tan;
+  padding: 50px;
+  margin: 0.5px;
+}
+
 .projects {
   text-align: center;
 }
 
 .card-container {
   margin: 10;
+  /* background-color: blue; */
 }
 
 .card-img-top {
@@ -143,7 +172,7 @@ nav {
 
 .card-container .card {
   padding: 30px;
-  background-color: gray;
+  background-color: silver;
 }
 
 #p4-img {
@@ -155,61 +184,69 @@ nav {
 /* ////////////////////////////////////////////////////////////////////// */
 
 /* //////////////////////SKILLS/EDUCATION ///////////////////////////////// */
+
 #skills-education {
-  /* background-color: indianred; */
-  padding: 10px;
-  /* align-items: center; */
-}
-
-.header {
-  /* background-color: lightpink; */
-  /* padding: 20px; */
-}
-
-.skill {
+  flex-direction: column;
+  padding: 50px;
+  background-color: thistle;
   align-items: center;
+  justify-content: center;
+  margin: 0.5px;
+}
+
+.card-container .skill-card {
+  /* border: gray solid 1px; */
+  margin: auto;
+  flex-direction: row;
+  padding: 3px;
+  background-color: white;
+  max-width: 670px;
+}
+
+.left-div {
+  width: 170px;
+}
+
+.backend {
+  background-color: lightgreen;
+}
+
+.icon-img {
+  width: 30px;
+  height: 30px;
+}
+
+.frontend {
+  background-color: cyan;
+}
+
+.apis {
+  background-color: peachpuff;
+}
+
+.left-text {
+  /* background-color: cornsilk; */
   text-align: center;
-  border: 1px black solid;
-  margin-bottom: 15px;
+  align-self: center;
+  margin-top: 140px;
+  font-size: 20px;
+  font-weight: 700;
 }
 
-.left {
-  height: 400px;
-  background-color: blue;
+.right-div {
+  /* background-color: chartreuse; */
+  padding-left: 60px;
+  padding-top: 15px;
+  height: 320px;
 }
 
-.right {
-  background-color: mediumvioletred;
-  height: 400px;
-  padding: 40px;
-}
-
-.backend-header {
-  background-color: lightsalmon;
-  padding: 30px;
-}
-
-.frontend-header {
-  background-color: maroon;
-}
-
-.api-header {
-  background-color: lawngreen;
-}
-
-.skill-list {
-  margin-top: 30px;
+.skills-list li {
   list-style-type: none;
-  text-align: initial;
-  height: 400px;
-}
-
-.skill-list li {
   margin: 10px;
+  /* margin-bottom: 10px; */
 }
 
-.skill-type {
-  margin-top: 180px;
+.auth {
+  font-weight: 700;
 }
-
 /* ////////////////////////////////////////////////////////////////////////// */
