--- a/index.css
+++ b/index.css
@@ -14,10 +14,15 @@ body {
   min-width: fit-content;
 }
 
+.section-header {
+  text-align: center;
+  margin-bottom: 25px;
+}
+
 /* NAVBAR */
 
 nav {
-  background: silver;
+  background-color: #4d7998;
   padding: 15px;
   width: 100%;
 }
@@ -81,42 +86,6 @@ nav {
   display: block;
 }
 
-/* Tablet view */
-@media all and (min-width: 700px) {
-  /* NAVBAR */
-  .menu {
-    justify-content: center;
-  }
-
-  .logo {
-    flex: 1;
-  }
-
-  .item {
-    width: auto;
-    order: 2;
-    display: block;
-    padding: 0 10px;
-  }
-
-  .headerDiv {
-    display: flex;
-    align-items: center;
-  }
-
-  .toggle {
-    display: none;
-  }
-
-  /* ///////////////////////// */
-
-  .body {
-    background: skyblue;
-    min-width: fit-content;
-    /* padding: 50px; */
-  }
-}
-
 .logo-img {
   width: 70px;
   height: 70px;
@@ -124,37 +93,43 @@ nav {
 }
 
 /* /////////////////////////// HOME ////////////////////////// */
+
 #home {
   padding: 50px;
-  background-color: snow;
-  margin: 0.5px;
+  background-color: #ececec;
+  margin: 0;
+  align-items: center;
+  justify-content: center;
 }
+
 #home-img {
-  align-self: center;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 #headshot {
-  width: 250px;
-  height: 300px;
-  border-radius: 85px;
+  width: 200px;
+  height: 250px;
+  border-radius: 170px;
 }
 
 .home-about {
   margin: 10px;
   list-style: none;
+  font-size: 20px;
 }
 
-/* .row {
-  width: 100%;
-} */
+.home-about li {
+  margin: 5px 0 5px 0;
+}
 
 /* ////////////////////////////////////////////////////////////////// */
 
 /* ////////////////////////////// Projects /////////////////////////// */
 #portfolio {
-  background-color: tan;
+  background-color: snow;
   padding: 50px;
-  margin: 0.5px;
+  margin: 0px;
 }
 
 .projects {
@@ -172,7 +147,7 @@ nav {
 
 .card-container .card {
   padding: 30px;
-  background-color: silver;
+  background-color: #ececec;
 }
 
 #p4-img {
@@ -183,15 +158,15 @@ nav {
 
 /* ////////////////////////////////////////////////////////////////////// */
 
-/* //////////////////////SKILLS/EDUCATION ///////////////////////////////// */
+/* //////////////////////SKILLS///////////////////////////////// */
 
-#skills-education {
+#skills-section {
   flex-direction: column;
   padding: 50px;
-  background-color: thistle;
+  background-color: #ececec;
   align-items: center;
   justify-content: center;
-  margin: 0.5px;
+  margin: 0px;
 }
 
 .card-container .skill-card {
@@ -201,6 +176,7 @@ nav {
   padding: 3px;
   background-color: white;
   max-width: 670px;
+  /* margin-bottom: 20px; */
 }
 
 .left-div {
@@ -234,7 +210,6 @@ nav {
 }
 
 .right-div {
-  /* background-color: chartreuse; */
   padding-left: 60px;
   padding-top: 15px;
   height: 320px;
@@ -243,10 +218,103 @@ nav {
 .skills-list li {
   list-style-type: none;
   margin: 10px;
-  /* margin-bottom: 10px; */
 }
 
 .auth {
   font-weight: 700;
 }
+
 /* ////////////////////////////////////////////////////////////////////////// */
+
+/* ///////////////////////////////EDUCATION/////////////////////////////////// */
+#edu-section {
+  background-color: #ececec;
+  padding: 50px;
+  align-items: center;
+  justify-content: center;
+  margin: 0px;
+}
+
+.edu-row .edu-container {
+  padding: 15px;
+  max-width: 450px;
+  margin: auto;
+  min-width: 450px;
+}
+
+.edu-card {
+  background-color: white;
+}
+
+.edu-img {
+  margin: 0 20px 10px 0;
+  width: 75px;
+  height: 75px;
+}
+
+.edu-name {
+  font-size: 22px;
+  font-weight: 700;
+}
+
+.edu-date {
+  font-size: 15px;
+  font-style: italic;
+}
+
+.edu-info {
+  margin-left: 10px;
+}
+
+.fa-map-pin {
+  color: #4d7998;
+  margin-right: 5px;
+}
+
+/* ////////////////////////////////////////////////////////////////////////// */
+
+/* Tablet view */
+@media all and (min-width: 700px) {
+  /* NAVBAR */
+  .menu {
+    justify-content: center;
+  }
+
+  .logo {
+    flex: 1;
+    /* margin-left: 80px; */
+    padding-left: 10px;
+  }
+
+  .item {
+    width: auto;
+    order: 2;
+    display: block;
+    padding: 0 10px;
+  }
+
+  .headerDiv {
+    display: flex;
+    align-items: center;
+  }
+
+  .toggle {
+    display: none;
+  }
+
+  /* ///////////////////////// */
+
+  .body {
+    background: skyblue;
+    min-width: fit-content;
+    /* padding: 50px; */
+  }
+
+  #home {
+    padding: 50px 0 50px 0;
+    background-color: #ececec;
+    margin: 0;
+    align-items: center;
+    justify-content: center;
+  }
+}
