--- a/index.css
+++ b/index.css
@@ -25,10 +25,20 @@ body {
 nav {
   background-color: #4d7998;
   padding: 15px;
+  opacity: 1;
   width: 100%;
   position: fixed;
   z-index: 2;
 }
+
+/* .header-show {
+  opacity: 0;
+  transition: opacity 0.9s ease-in;
+}
+
+.header-show.appear {
+  opacity: 1;
+} */
 
 .item {
   padding: 10px;
@@ -39,12 +49,13 @@ nav {
 }
 
 .item a {
-  color: white;
+  color: black;
   text-decoration: none;
+  transition: 0.5s ease;
 }
 
 .menu {
-  list-style-type: none;
+  /* list-style-type: none; */
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -58,21 +69,14 @@ nav {
   font-size: 20px;
   padding-right: 10px;
   justify-content: center;
-  /* color: white; */
+  color: white;
   padding-left: 30px;
-}
-
-.item {
-  padding: 10px;
-  order: 2;
-  width: 100%;
-  text-align: center;
-  display: none;
 }
 
 .item a:hover,
 .item a:hover::after {
-  color: blue;
+  color: black;
+  text-decoration: none;
 }
 
 .menu li a {
@@ -86,9 +90,12 @@ nav {
   display: inline-block;
 }
 
-.active {
+.active .item {
   display: block;
-  font-size: 30px;
+}
+
+.active {
+  font-size: 25px;
 }
 
 .logo-img {
@@ -97,6 +104,18 @@ nav {
   border-radius: 50px;
 }
 
+.toggle {
+  background-color: rgb(38, 38, 38);
+  width: 30px;
+  border-radius: 10px;
+  border: none;
+}
+
+.fa-bars,
+.fa-times {
+  margin-top: 10px;
+  color: white;
+}
 /* /////////////////////////// HOME ////////////////////////// */
 
 #home {
@@ -106,11 +125,12 @@ nav {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  background-attachment: fixed;
 }
 
 #home-img {
   text-align: center;
-  margin-bottom: 20px;
+  margin-top: 100px;
 }
 
 #headshot {
@@ -132,6 +152,7 @@ nav {
 /* ////////////////////////////////////////////////////////////////// */
 
 /* ////////////////////////////// Projects /////////////////////////// */
+
 .fade-in {
   opacity: 0;
   transition: opacity 0.9s ease-in;
@@ -298,7 +319,7 @@ nav {
 
 /* ///////////////////////////////EDUCATION/////////////////////////////////// */
 #edu-section {
-  background-color: #ececec;
+  background-color: white;
   padding: 50px;
   align-items: center;
   justify-content: center;
@@ -313,7 +334,7 @@ nav {
 }
 
 .edu-card {
-  background-color: white;
+  background-color: #ececec;
   transition: 1.5s ease;
 }
 
@@ -350,12 +371,62 @@ nav {
 
 /* //////////////////////////////ABOUT ME///////////////////////////////////// */
 
-#about-section {
-  background-color: white;
+#about {
+  background-color: #ececec;
+  padding: 50px;
+  align-items: center;
+  justify-content: center;
+  margin: 0px;
 }
 
 /* ////////////////////////////////////////////////////////////////////////// */
 
+/* //////////////////////////////CONTACT///////////////////////////////////// */
+#contact {
+  background-color: white;
+  padding: 50px;
+  align-items: center;
+  justify-content: center;
+  margin: 0px;
+}
+
+.contact-container {
+  margin-top: 40px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  /* width: 900px; */
+}
+
+.name-div {
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+
+.email-div {
+  padding: 10px;
+}
+
+.contact-div {
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+
+#contact-icons-list {
+  list-style-type: none;
+}
+
+#contact-icons-list li {
+  margin: 0 10px 0 10px;
+}
+
+.name {
+  font-weight: 700;
+}
+
+/* ////////////////////////////////////////////////////////////////////////// */
 /* Tablet view */
 @media all and (min-width: 700px) {
   /* NAVBAR */
@@ -399,5 +470,10 @@ nav {
     margin: 0;
     align-items: center;
     justify-content: center;
+  }
+
+  #home-img {
+    text-align: center;
+    margin-top: 0;
   }
 }
