--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@
   font-family: 'Kumbh Sans', sans-serif;
 }
 
+[class*='col-'] {
+  width: 100%;
+}
+
 body {
   min-width: fit-content;
   overflow-x: hidden;
@@ -437,16 +441,101 @@ nav {
 }
 
 /* ////////////////////////////////////////////////////////////////////////// */
+
+/* For mobile phones: */
+[class*='col-'] {
+  width: 100%;
+}
+
+@media only screen and (min-width: 600px) {
+  /* For tablets: */
+  .col-s-1 {
+    width: 8.33%;
+  }
+  .col-s-2 {
+    width: 16.66%;
+  }
+  .col-s-3 {
+    width: 25%;
+  }
+  .col-s-4 {
+    width: 33.33%;
+  }
+  .col-s-5 {
+    width: 41.66%;
+  }
+  .col-s-6 {
+    width: 50%;
+  }
+  .col-s-7 {
+    width: 58.33%;
+  }
+  .col-s-8 {
+    width: 66.66%;
+  }
+  .col-s-9 {
+    width: 75%;
+  }
+  .col-s-10 {
+    width: 83.33%;
+  }
+  .col-s-11 {
+    width: 91.66%;
+  }
+  .col-s-12 {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {
+    width: 8.33%;
+  }
+  .col-2 {
+    width: 16.66%;
+  }
+  .col-3 {
+    width: 25%;
+  }
+  .col-4 {
+    width: 33.33%;
+  }
+  .col-5 {
+    width: 41.66%;
+  }
+  .col-6 {
+    width: 50%;
+  }
+  .col-7 {
+    width: 58.33%;
+  }
+  .col-8 {
+    width: 66.66%;
+  }
+  .col-9 {
+    width: 75%;
+  }
+  .col-10 {
+    width: 83.33%;
+  }
+  .col-11 {
+    width: 91.66%;
+  }
+  .col-12 {
+    width: 100%;
+  }
+}
 /* Tablet view */
-@media all and (min-width: 700px) {
-  /* NAVBAR */
+/* @media only screen and (min-width: 700px) {
+  
   .menu {
     justify-content: center;
   }
 
   .logo {
     flex: 1;
-    /* margin-left: 80px; */
+ 
     padding-left: 10px;
   }
 
@@ -466,12 +555,12 @@ nav {
     display: none;
   }
 
-  /* ///////////////////////// */
+
 
   .body {
     background: skyblue;
     min-width: fit-content;
-    /* padding: 50px; */
+  
   }
 
   #home {
@@ -486,4 +575,4 @@ nav {
     text-align: center;
     margin-top: 0;
   }
-}
+} */
