fixed min width

--- a/index.css
+++ b/index.css
@@ -9,14 +9,8 @@
   width: 100%;
 }
 
-body {
-  min-width: fit-content;
-  overflow-x: hidden;
-}
 .body {
   background: skyblue;
-  /* padding: 20px; */
-  min-width: fit-content;
 }
 
 .section-header {
@@ -168,7 +162,7 @@ nav {
 
 #portfolio {
   background-color: snow;
-  padding: 50px;
+  padding: 50px 0 50px 0;
   margin: 0px;
 }
 
@@ -181,6 +175,7 @@ nav {
 }
 
 .card-img-top {
+  width: 100%;
   height: 380px;
   opacity: 1;
   transition: 0.5s ease;
@@ -188,7 +183,7 @@ nav {
 }
 
 .card-container .project-card {
-  padding: 30px;
+  /* padding: 30px; */
   background-color: #ececec;
   height: 680px;
 }
@@ -442,100 +437,15 @@ nav {
 
 /* ////////////////////////////////////////////////////////////////////////// */
 
-/* For mobile phones: */
-[class*='col-'] {
-  width: 100%;
-}
-
-@media only screen and (min-width: 600px) {
-  /* For tablets: */
-  .col-s-1 {
-    width: 8.33%;
-  }
-  .col-s-2 {
-    width: 16.66%;
-  }
-  .col-s-3 {
-    width: 25%;
-  }
-  .col-s-4 {
-    width: 33.33%;
-  }
-  .col-s-5 {
-    width: 41.66%;
-  }
-  .col-s-6 {
-    width: 50%;
-  }
-  .col-s-7 {
-    width: 58.33%;
-  }
-  .col-s-8 {
-    width: 66.66%;
-  }
-  .col-s-9 {
-    width: 75%;
-  }
-  .col-s-10 {
-    width: 83.33%;
-  }
-  .col-s-11 {
-    width: 91.66%;
-  }
-  .col-s-12 {
-    width: 100%;
-  }
-}
-
-@media only screen and (min-width: 768px) {
-  /* For desktop: */
-  .col-1 {
-    width: 8.33%;
-  }
-  .col-2 {
-    width: 16.66%;
-  }
-  .col-3 {
-    width: 25%;
-  }
-  .col-4 {
-    width: 33.33%;
-  }
-  .col-5 {
-    width: 41.66%;
-  }
-  .col-6 {
-    width: 50%;
-  }
-  .col-7 {
-    width: 58.33%;
-  }
-  .col-8 {
-    width: 66.66%;
-  }
-  .col-9 {
-    width: 75%;
-  }
-  .col-10 {
-    width: 83.33%;
-  }
-  .col-11 {
-    width: 91.66%;
-  }
-  .col-12 {
-    width: 100%;
-  }
-}
 /* Tablet view */
-/* @media only screen and (min-width: 700px) {
-  
+@media only screen and (min-width: 700px) {
   .menu {
     justify-content: center;
   }
 
   .logo {
     flex: 1;
- 
+
     padding-left: 10px;
   }
 
@@ -555,12 +465,9 @@ nav {
     display: none;
   }
 
-
-
   .body {
     background: skyblue;
     min-width: fit-content;
-  
   }
 
   #home {
@@ -575,4 +482,8 @@ nav {
     text-align: center;
     margin-top: 0;
   }
-} */
+
+  #portfolio {
+    padding: 50px;
+  }
+}
