--- a/index.css
+++ b/index.css
@@ -9,6 +9,10 @@
   width: 100%;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .body {
   background: skyblue;
 }
@@ -262,7 +266,7 @@ nav {
 
 #skills-section {
   flex-direction: column;
-  padding: 50px;
+  /* padding: 50px 0 50px 0; */
   background-color: #ececec;
   align-items: center;
   justify-content: center;
