--- a/index.css
+++ b/index.css
@@ -122,6 +122,7 @@ nav {
 
 #home {
   padding: 50px;
+
   background-color: #ececec;
   margin: 0;
   align-items: center;
@@ -145,6 +146,7 @@ nav {
   margin: 10px;
   list-style: none;
   font-size: 20px;
+  background-color: blue;
 }
 
 .home-about li {
@@ -187,7 +189,7 @@ nav {
 }
 
 .card-container .project-card {
-  /* padding: 30px; */
+  padding: 30px;
   background-color: #ececec;
   height: 680px;
 }
@@ -237,9 +239,9 @@ nav {
 
 /* //////////////////////SKILLS///////////////////////////////// */
 
-.express {
+/* .express {
   background-color: lime;
-}
+} */
 
 .clicked {
   background-color: blue;
@@ -266,11 +268,15 @@ nav {
 
 #skills-section {
   flex-direction: column;
-  /* padding: 50px 0 50px 0; */
+  padding: 50px 0 50px 0;
   background-color: #ececec;
   align-items: center;
   justify-content: center;
   margin: 0px;
+}
+
+#skills-row {
+  max-width: 100%;
 }
 
 .card-container .skill-card {
