--- a/index.css
+++ b/index.css
@@ -121,7 +121,7 @@ nav {
 /* /////////////////////////// HOME ////////////////////////// */
 
 #home {
-  /* padding: 50px; */
+  padding: 50px;
 
   background-color: #ececec;
   margin: 0;
@@ -169,7 +169,6 @@ nav {
   background-color: snow;
   padding: 50px 0 50px 0;
   margin: 0px;
-  text-align: center;
 }
 
 .projects {
@@ -181,7 +180,7 @@ nav {
 }
 
 .card-img-top {
-  /* width: 100%; */
+  width: 100%;
   height: 380px;
   opacity: 1;
   transition: 0.5s ease;
@@ -268,12 +267,11 @@ nav {
 
 #skills-section {
   flex-direction: column;
-  /* padding: 50px 0 50px 0; */
+  padding: 50px 0 50px 0;
   background-color: #ececec;
   align-items: center;
   justify-content: center;
   margin: 0px;
-  text-align: center;
 }
 
 #skills-row {
@@ -340,11 +338,10 @@ nav {
 /* ///////////////////////////////EDUCATION/////////////////////////////////// */
 #edu-section {
   background-color: white;
-  /* padding: 50px; */
+  padding: 50px;
   align-items: center;
   justify-content: center;
   margin: 0px;
-  text-align: center;
 }
 
 .edu-row .edu-container {
@@ -394,11 +391,22 @@ nav {
 
 #about {
   background-color: #ececec;
-  /* padding: 50px; */
+  padding: 50px;
   align-items: center;
   justify-content: center;
   margin: 0px;
-  text-align: center;
+}
+
+.am {
+  border: indianred 1px solid;
+  display: flex;
+  padding: 10px;
+}
+
+.am-pic {
+  width: 150px;
+  height: 150px;
+  border-radius: 100px;
 }
 
 /* ////////////////////////////////////////////////////////////////////////// */
@@ -410,7 +418,6 @@ nav {
   align-items: center;
   justify-content: center;
   margin: 0px;
-  text-align: center;
 }
 
 .contact-container {
