styled contact section a bit more

--- a/index.css
+++ b/index.css
@@ -463,11 +463,11 @@ nav {
 
 input,
 textarea {
-  width: 370px;
+  width: 65vw;
 }
 
 textarea {
-  height: 200px;
+  height: 150px;
 }
 /* ////////////////////////////////////////////////////////////////////////// */
 
