--- a/index.css
+++ b/index.css
@@ -117,11 +117,14 @@ nav {
   background-image: url(https://images.unsplash.com/photo-1551037111-e4f83e5e375d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=889&q=80);
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   margin: 0;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-attachment: fixed;
+  background-attachment: scroll;
 }
 
 #home-img {
@@ -560,6 +563,7 @@ input[type='submit'] {
     margin: 0;
     align-items: center;
     justify-content: center;
+    background-attachment: fixed;
   }
 
   #home-img {
