home section min width

--- a/index.css
+++ b/index.css
@@ -125,6 +125,7 @@ nav {
   justify-content: center;
   height: 100vh;
   background-attachment: scroll;
+  min-width: 100%;
 }
 
 #home-img {
@@ -210,14 +211,6 @@ nav {
   /* width: 150px; */
   height: 410px;
 }
-
-/* .card-img-top {
-  width: 100%;
-  height: 380px;
-  opacity: 1;
-  transition: 0.5s ease;
-  backface-visibility: hidden;
-} */
 
 .carousel-inner {
   background-color: #ececec;
