--- a/index.css
+++ b/index.css
@@ -167,6 +167,7 @@ nav {
   background-color: snow;
   padding: 50px 0 50px 0;
   margin: 0px;
+  min-width: 100%;
 }
 
 .projects .card-container .project-card {
@@ -295,6 +296,7 @@ nav {
   align-items: center;
   justify-content: center;
   margin: 0px;
+  min-width: 100%;
 }
 
 #skills-row {
@@ -365,6 +367,7 @@ nav {
   align-items: center;
   justify-content: center;
   margin: 0px;
+  min-width: 100%;
 }
 
 .edu-row .edu-container {
@@ -418,6 +421,7 @@ nav {
   align-items: center;
   justify-content: center;
   margin: 0px;
+  min-width: 100%;
 }
 
 .am {
@@ -452,6 +456,7 @@ nav {
   align-items: center;
   justify-content: center;
   margin: 0px;
+  min-width: 100%;
 }
 
 .contact {
