--- a/index.css
+++ b/index.css
@@ -20,8 +20,8 @@ nav {
   background-color: #4d7998;
   padding: 15px;
   opacity: 1;
-  width: 100%;
-  position: fixed;
+  max-width: 100%;
+  position: absolute;
   z-index: 2;
 }
 
