--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
   padding: 0;
   margin: 0;
   font-family: 'Kumbh Sans', sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 [class*='col-'] {
