--- a/index.css
+++ b/index.css
@@ -3,11 +3,14 @@
   padding: 0;
   margin: 0;
   font-family: 'Kumbh Sans', sans-serif;
-  overflow-x: hidden;
 }
 
 [class*='col-'] {
   width: 100%;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 .section-header {
