--- a/index.css
+++ b/index.css
@@ -380,8 +380,8 @@ nav {
   align-items: center;
   justify-content: center;
   margin: 0px;
-  min-width: 100%;
-  max-width: fit-content;
+  min-width: fit-content;
+  /* max-width: fit-content; */
   border: red 1px solid;
 }
 
