--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ nav {
   background-color: #4d7998;
   padding: 15px;
   opacity: 1;
-  width: 100%;
+  min-width: 100%;
   position: absolute;
   z-index: 2;
 }
