--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ nav {
   opacity: 1;
   min-width: 100%;
   max-width: 100%;
-  position: absolute;
+  /* position: absolute; */
   z-index: 2;
 }
 
