--- a/index.css
+++ b/index.css
@@ -121,7 +121,7 @@ nav {
 
 #home {
   padding: 50px;
-  background-image: url(https://images.unsplash.com/photo-1581472723648-909f4851d4ae?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80);
+  background-image: url(https://images.unsplash.com/photo-1581472723648-909f4851d4ae?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);
   background-repeat: no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
@@ -169,6 +169,10 @@ nav {
 
 .fade-in.appear {
   opacity: 1;
+}
+
+section .section-header {
+  padding-right: 45px;
 }
 
 #portfolio {
