centered section header

--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ body {
 /* NAVBAR */
 
 nav {
-  background-color: #4d7998;
+  background-color: #afc1ce;
   padding: 15px;
   opacity: 1;
   min-width: 100%;
