--- a/index.css
+++ b/index.css
@@ -593,6 +593,10 @@ input[type='submit'] {
 }
 
 @media screen and (max-width: 768px) {
+  html {
+    overflow-x: hidden;
+  }
+
   body {
     overflow-x: hidden;
     min-width: 100%;
