--- a/index.css
+++ b/index.css
@@ -595,6 +595,7 @@ input[type='submit'] {
 @media screen and (max-width: 768px) {
   html {
     overflow-x: hidden;
+    position: relative;
   }
 
   body {
